generated/checker-for-evaluation/generated/test-Uninit-Data-eaa03486d932572dfd1c5f64f9dfebe572ad88c0/build_logs/3/build_error_log1.log
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘void {anonymous}::SAGenTestChecker::checkPostStmt(const clang::DeclStmt*, clang::ento::CheckerContext&) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:81:64: error: no matching function for call to ‘clang::DeclRefExpr::DeclRefExpr(clang::VarDecl*, bool, clang::QualType, clang::ExprValueKind, clang::SourceLocation)’
   81 |                     VD->getType(), VK_LValue, DS->getBeginLoc());
      |                                                                ^
In file included from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/AST/DeclCXX.h:22,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/AST/ExprCXX.h:21,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/Analysis/CFG.h:18,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/Analysis/AnalysisDeclContext.h:22,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/Analysis/PathDiagnostic.h:17,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:17,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:1:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/AST/Expr.h:1287:3: note: candidate: ‘clang::DeclRefExpr::DeclRefExpr(const clang::ASTContext&, clang::ValueDecl*, bool, clang::QualType, clang::ExprValueKind, clang::SourceLocation, const clang::DeclarationNameLoc&, clang::NonOdrUseReason)’
 1287 |   DeclRefExpr(const ASTContext &Ctx, ValueDecl *D,
      |   ^~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/AST/Expr.h:1287:3: note:   candidate expects 8 arguments, 5 provided
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/AST/Expr.h:1284:12: note: candidate: ‘clang::DeclRefExpr::DeclRefExpr(clang::Stmt::EmptyShell)’
 1284 |   explicit DeclRefExpr(EmptyShell Empty) : Expr(DeclRefExprClass, Empty) {}
      |            ^~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/AST/Expr.h:1284:12: note:   candidate expects 1 argument, 5 provided
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/AST/Expr.h:1276:3: note: candidate: ‘clang::DeclRefExpr::DeclRefExpr(const clang::ASTContext&, clang::NestedNameSpecifierLoc, clang::SourceLocation, clang::ValueDecl*, bool, const clang::DeclarationNameInfo&, clang::NamedDecl*, const clang::TemplateArgumentListInfo*, clang::QualType, clang::ExprValueKind, clang::NonOdrUseReason)’
 1276 |   DeclRefExpr(const ASTContext &Ctx, NestedNameSpecifierLoc QualifierLoc,
      |   ^~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/AST/Expr.h:1276:3: note:   candidate expects 11 arguments, 5 provided
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:31101: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:31108: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
